--- a/nasa_apka/nasa_apka/nasa_apka.csproj
+++ b/nasa_apka/nasa_apka/nasa_apka.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="Page3Xaml.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Page4Xaml.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
