--- a/nasa_apka/nasa_apka/nasa_apka.csproj
+++ b/nasa_apka/nasa_apka/nasa_apka.csproj
@@ -28,5 +28,11 @@
     <EmbeddedResource Update="Page4Xaml.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Page5Xaml.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Page6Xaml.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
